--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,80 @@
+@import url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap');
 *{
     margin:0;
     padding:0;
 }
 
 html{
-    font-family:'Source Sans Pro', sans-serif;
+    font-family: 'Source Sans Pro', sans-serif;
     font-style:normal;
-    font-size:16px;
-    line-height:1.8;
-    color:#5a5150
+    font-size: 16xp;
+    color: #5a5150;
+    line-height: 1.8;
 }
 
-h1, h2, h3, h4, h5, h6{
+.wrapper{
+    background-color: white;
+    margin:0 auto;
+    max-width: 125px;
+}
+
+header{
+    height: 90px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    box-shadow: 0 2px 8px rgb(0 0 0 / 5%);
+    padding:0 40px;
+    margin-bottom: 40px;
+}
+
+.logo{
+    margin-top: 10px;
+}
+
+ul.main-menu{
+    list-style: none;
+}
+
+li.menu-item{
+    display:inline-block;
+    padding-right: 15px;
+}
+
+li.menu-item::after{
+    content: " | ";
+    padding-left: 15px;
+    color: #eaeaea;
+}
+
+ul.socials{
+    list-style: none;
+    color: #4c4b4b;
+}
+
+li.social-items {
+    display: inline-block;
+    padding-right: 15px;
+}
+
+li.menu-item a,
+li.social-items a{
+    color: #4c4b4b;
+}
+
+li.menu-item a:hover,
+li.social-items a:hover{
+    color: #ca404f;
+}
+
+
+h1, h2, h3, h4 , h5 ,h6{
     font-family: 'Karla', sans-serif;
-    font-style:normal;
-    line-height:1.4;
-    color:#4e4b4b
+    font-style: normal;
+    font-weight: normal;
+    color: #4e4b4b;
+    line-height: 1.4;
 }
 
 h2{
@@ -24,28 +83,90 @@ h2{
 }
 
 h3{
-    font-size:40px;
-    line-height:1.2;
+    font-size:16px;
+    line-height:1.4;
 }
 
 h4{
     font-size:16px;
+    color: #919291;
     line-height:1.4;
-    color:#919291;
 }
 
-a{
-    font-family: 'Karla', sans-serif;
-    font: size 14px;
-    line-height:1.4;
-    color:#ca404f;
-    text-decoration: none;
-}
 
 button{
     font-family: 'Karla', sans-serif;
     font-size: 16px;
-    line-height:42px;
+    height:42px;
     color: #ffff;
     background-color: #ca404f;
+    padding: 0 20px;
+    line-height: 42px;
+    border: none;
 }
+
+a{
+    font-family: 'Karla', sans-serif;
+    font-size:14px;
+    color: #ca404f;
+    line-height:1.4;
+    text-decoration:none;
+}
+
+Main{
+    padding:0 100px 40px 100px;
+    background-image: url("../img/background.png");
+    background-repeat: no-repeat;
+    background-position: center bottom;
+}
+
+.recepten{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.recept{
+    display: flex;
+    width: 1040px;
+}
+
+.description{
+    width: 486px;
+    margin-right: 70px;
+}
+
+.description h4{
+    margin-top: 15px;
+}
+
+.description p{
+    margin: 60px 0;
+}
+
+.recept-items 
+.recept-image img{
+    width: 485px;
+}
+
+.recept-items .items{
+    display: grid;
+    grid-template-columns: auto 100px;
+    padding-bottom: 15px;
+    border-bottom: 1px solid #eaeaea;
+    margin-bottom: 15px;
+}
+
+.recept-items .items:hover{
+    background-color: #eaeaea;
+    padding-left: 10px;
+}
+
+.item-text{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 10px;
+}
+
